правки по навигации избранных устройств

--- a/source/pages/main/index.html
+++ b/source/pages/main/index.html
@@ -416,15 +416,15 @@
 
                     </div>
                 </div>
-                <div class="favorite-scenarios container_paddingLeft">
+                <div id='favoriteScenariosCarousel' class="favorite-scenarios container_paddingLeft">
                     <h2 class="main__title">Избранные сценарии</h2>
-                    <div id="carousel-multi__mobile" class="carousel">
-                        <div class="gallery">
-                            <ul class="gallery__nav">
-                                <li class="gallery__item">
+                    <div id='favoriteScenariosCarousel' class="carousel-multi">
+                        <div class="gallery-multi">
+                            <ul  class="gallery-multi__nav">
+                                <li class="gallery-multi__item">
                                     <div class="card card-light card_heigth100">
                                         <div class="card__icon">
-                                            <div class="card__img card__img_active">
+                                            <div class="card__img">
                                                 <picture>
                                                     <source srcset="${require(`../../images/icon_sun@1x.png`)} 1x">
                                                     <source srcset="${require(`../../images/icon_sun@2x.png`)} 2x">
@@ -432,7 +432,7 @@
                                                     <img src="${require(`../../images/icon_sun@1x.png`)}" alt="Яркость">
                                                 </picture>
                                             </div>
-                                            <div class="card__img">
+                                            <div class="card__img card__img_active">
                                                 <picture>
                                                     <source srcset="${require(`../../images/icon_sun_2@1x.png`)} 1x">
                                                     <source srcset="${require(`../../images/icon_sun_2@2x.png`)} 2x">
@@ -446,29 +446,106 @@
                                         </h2>
                                     </div>
                                 </li>
-                                <li class="gallery__item">
-                                    <div class="card  card_heigth100">
+                                <li class="gallery-multi__item">
+                                    <div class="card card-light card_heigth100">
                                         <div class="card__icon">
+                                            <div class="card__img">
+                                                <picture>
+                                                    <source srcset="${require(`../../images/icon_sun@1x.png`)} 1x">
+                                                    <source srcset="${require(`../../images/icon_sun@2x.png`)} 2x">
+                                                    <source srcset="${require(`../../images/icon_sun.svg`)}" type="image/svg+xml">
+                                                    <img src="${require(`../../images/icon_sun@1x.png`)}" alt="Яркость">
+                                                </picture>
+                                            </div>
                                             <div class="card__img card__img_active">
                                                 <picture>
-                                                    <source srcset="${require(`../../images/icon_scheduled@1x.png`)} 1x">
-                                                    <source srcset="${require(`../../images/icon_scheduled@2x.png`)} 2x">
-                                                    <source srcset="${require(`../../images/icon_scheduled.svg`)}" type="image/svg+xml">
-                                                    <img src="${require(`../../images/icon_scheduled@1x.png`)}" alt="Яркость">
+                                                    <source srcset="${require(`../../images/icon_sun_2@1x.png`)} 1x">
+                                                    <source srcset="${require(`../../images/icon_sun_2@2x.png`)} 2x">
+                                                    <source srcset="${require(`../../images/icon_sun_2.svg`)}" type="image/svg+xml">
+                                                    <img src="${require(`../../images/icon_sun_2@1x.png`)}" alt="Яркость">
                                                 </picture>
                                             </div>
                                         </div>
                                         <h2 class="card__title">
-                                            Я ухожу
+                                            Выключить весь свет в доме и во дворе
                                         </h2>
                                     </div>
                                 </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div id="carousel-multi" class="carousel-multi">
-                        <div class="gallery-multi">
-                            <ul class="gallery-multi__nav">
+                                <li class="gallery-multi__item">
+                                    <div class="card card-light card_heigth100">
+                                        <div class="card__icon">
+                                            <div class="card__img">
+                                                <picture>
+                                                    <source srcset="${require(`../../images/icon_sun@1x.png`)} 1x">
+                                                    <source srcset="${require(`../../images/icon_sun@2x.png`)} 2x">
+                                                    <source srcset="${require(`../../images/icon_sun.svg`)}" type="image/svg+xml">
+                                                    <img src="${require(`../../images/icon_sun@1x.png`)}" alt="Яркость">
+                                                </picture>
+                                            </div>
+                                            <div class="card__img card__img_active">
+                                                <picture>
+                                                    <source srcset="${require(`../../images/icon_sun_2@1x.png`)} 1x">
+                                                    <source srcset="${require(`../../images/icon_sun_2@2x.png`)} 2x">
+                                                    <source srcset="${require(`../../images/icon_sun_2.svg`)}" type="image/svg+xml">
+                                                    <img src="${require(`../../images/icon_sun_2@1x.png`)}" alt="Яркость">
+                                                </picture>
+                                            </div>
+                                        </div>
+                                        <h2 class="card__title">
+                                            Выключить весь свет в доме и во дворе
+                                        </h2>
+                                    </div>
+                                </li>
+                                <li class="gallery-multi__item">
+                                    <div class="card card-light card_heigth100">
+                                        <div class="card__icon">
+                                            <div class="card__img">
+                                                <picture>
+                                                    <source srcset="${require(`../../images/icon_sun@1x.png`)} 1x">
+                                                    <source srcset="${require(`../../images/icon_sun@2x.png`)} 2x">
+                                                    <source srcset="${require(`../../images/icon_sun.svg`)}" type="image/svg+xml">
+                                                    <img src="${require(`../../images/icon_sun@1x.png`)}" alt="Яркость">
+                                                </picture>
+                                            </div>
+                                            <div class="card__img card__img_active">
+                                                <picture>
+                                                    <source srcset="${require(`../../images/icon_sun_2@1x.png`)} 1x">
+                                                    <source srcset="${require(`../../images/icon_sun_2@2x.png`)} 2x">
+                                                    <source srcset="${require(`../../images/icon_sun_2.svg`)}" type="image/svg+xml">
+                                                    <img src="${require(`../../images/icon_sun_2@1x.png`)}" alt="Яркость">
+                                                </picture>
+                                            </div>
+                                        </div>
+                                        <h2 class="card__title">
+                                            Выключить весь свет в доме и во дворе
+                                        </h2>
+                                    </div>
+                                </li>
+                                <li class="gallery-multi__item">
+                                    <div class="card card-light card_heigth100">
+                                        <div class="card__icon">
+                                            <div class="card__img">
+                                                <picture>
+                                                    <source srcset="${require(`../../images/icon_sun@1x.png`)} 1x">
+                                                    <source srcset="${require(`../../images/icon_sun@2x.png`)} 2x">
+                                                    <source srcset="${require(`../../images/icon_sun.svg`)}" type="image/svg+xml">
+                                                    <img src="${require(`../../images/icon_sun@1x.png`)}" alt="Яркость">
+                                                </picture>
+                                            </div>
+                                            <div class="card__img card__img_active">
+                                                <picture>
+                                                    <source srcset="${require(`../../images/icon_sun_2@1x.png`)} 1x">
+                                                    <source srcset="${require(`../../images/icon_sun_2@2x.png`)} 2x">
+                                                    <source srcset="${require(`../../images/icon_sun_2.svg`)}" type="image/svg+xml">
+                                                    <img src="${require(`../../images/icon_sun_2@1x.png`)}" alt="Яркость">
+                                                </picture>
+                                            </div>
+                                        </div>
+                                        <h2 class="card__title">
+                                            Выключить весь свет в доме и во дворе
+                                        </h2>
+                                    </div>
+                                </li>
                                 <li class="gallery-multi__item">
                                     <div class="card card-light card_heigth100">
                                         <div class="card__icon">
