подправлен бегунок температуры пола

--- a/public/index.html
+++ b/public/index.html
@@ -421,6 +421,31 @@
                     <div class="carousel-multi">
                         <div id='favoriteScenariosCarousel' class="gallery-multi">
                             <ul id='favoriteScenariosTrack' class="gallery-multi__nav">
+                                    <li class="gallery-multi__item">
+                                            <div class="card card-floor card_heigth100">
+                                                <div class="card__icon">
+                                                    <div class="card__img ">
+                                                        <picture>
+                                                            <source srcset="./images/icon_temperature@1x.png 1x">
+                                                            <source srcset="./images/icon_temperature@2x.png 2x">
+                                                            <source srcset="./images/icon_temperature.svg" type="image/svg+xml">
+                                                            <img src="./images/icon_temperature@1x.png" alt="Температура">
+                                                        </picture>
+                                                    </div>
+                                                    <div class="card__img card__img_active">
+                                                        <picture>
+                                                            <source srcset="./images/icon_temperature_2@1x.png 1x">
+                                                            <source srcset="./images/icon_temperature_2@2x.png 2x">
+                                                            <source srcset="./images/icon_temperature_2.svg" type="image/svg+xml">
+                                                            <img src="./images/icon_temperature_2@1x.png" alt="Температура">
+                                                        </picture>
+                                                    </div>
+                                                </div>
+                                                <h2 class="card__title">
+                                                    Сделать пол тёплым во всей квартире
+                                                </h2>
+                                            </div>
+                                        </li>
                                 <li class="gallery-multi__item">
                                     <div class="card card-light card_heigth100">
                                         <div class="card__icon">
