--- a/source/pages/main/index.html
+++ b/source/pages/main/index.html
@@ -30,9 +30,6 @@
                 </div>
                 <div class="card__sheduling popap-sheduling">Включено</div>
                 <div class="slider-wrapper slider-wrapper-floor">
-                    <div class="slider-lines">
-
-                    </div>
                     <div id="parent">
                         <div id="child">
                             <div class="child-img">
@@ -206,7 +203,7 @@
                 <!-- <nav class="header-nav header-nav-hamburger_active"> -->
                 <nav class="header-nav">
                     <li class="header__item">
-                        <a href="#" class="header__link">Сводка</a>
+                        <a href="#" class="header__link header__link_active">Сводка</a>
                     </li>
                     <li class="header__item">
                         <a href="#" class="header__link">Устройства</a>
