--- a/public/index.html
+++ b/public/index.html
@@ -656,7 +656,7 @@
                     <h2 class="main__title">Избранные устройства</h2>
                     <div class="menu-dropdown">
                         <div class="menu-dropdown__title">
-                            <span class="favorite-devices__link favorite-devices__link_paddingRight favorite-devices__link_active favorite-devices__link_active menu-dropdown__active">Лампочки</span>
+                            <span class="favorite-devices__link favorite-devices__link_paddingRight favorite-devices__link_active favorite-devices__link_active menu-dropdown__active" data-type='all'>Все</span>
                             <button class="arrow menu-dropdown__btn">
                                 <svg class="arrow-icon-prev" viewBox="0 0 9 14" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                     <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z"
