сортировка избранных устройств на десктопе

--- a/public/index.html
+++ b/public/index.html
@@ -707,7 +707,7 @@
                     <div class="gallery">
                         <ul id="favoriteDevicesCarouselTrack" class="gallery__nav">
                             <li class="gallery__item gallery__item_favorite-devices">
-                                <div class="card card-light" data-card='kitchen'>
+                                <div class="card card-light" data-card='hall'>
                                     <div class="card__icon">
                                         <div class="card__img">
                                             <picture>
